--- a/app/src/main/res/layout/city_recycler_item.xml
+++ b/app/src/main/res/layout/city_recycler_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/margin_12"
         android:layout_weight="2"
-        android:text="@string/temp_default"
+        android:text="@string/temp_default_shown"
         android:textSize="20sp" />
 
     <ImageView
